// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link Element renders button with class 1`] = `
<a
  className="tribe-editor__link test-class"
  href="#"
>
  label
</a>
`;

exports[`Link Element renders button with prop 1`] = `
<a
  className="tribe-editor__link"
  href="#"
  title="title"
>
  label
</a>
`;

exports[`Link Element renders button with target 1`] = `
<a
  className="tribe-editor__link"
  href="#"
  rel="noopener noreferrer"
  target="_blank"
>
  label
</a>
`;

exports[`Link Element renders link 1`] = `
<a
  className="tribe-editor__link"
  href="#"
>
  label
</a>
`;
